Add tests for java.util.Set